--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="assets/css/style1.css" rel="stylesheet">
 
         <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <link href="assets/css/style.css" rel="stylesheet">
         <link href="assets/css/theme-color.css" rel="stylesheet"> 
         <script src="assets/js/jquery-2.1.4.min.js"></script>
     </head>
